WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200513
Web Inspector: Uncaught Exception: TimelineAgent already enabled
https://bugs.webkit.org/show_bug.cgi?id=200513
Summary
Web Inspector: Uncaught Exception: TimelineAgent already enabled
Devin Rousso
Reported
2019-08-07 11:55:45 PDT
------- Inspected URL:
https://webkit.org/
Loading completed: true Frontend User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15) AppleWebKit/605.1.15 (KHTML, like Gecko) Uncaught Exceptions: - TimelineAgent already enabled (at Connection.js:158:29) _dispatchResponseToPromise @ Connection.js:158:29 _dispatchResponse @ Connection.js:120:44 dispatch @ Connection.js:70:35 dispatchMessageFromTarget @ TargetManager.js:101:35 dispatchMessageFromTarget @ TargetObserver.js:42:51 dispatchEvent @ InspectorBackend.js:340:42 _dispatchEvent @ Connection.js:195:32 dispatch @ Connection.js:72:32 dispatch @ InspectorBackend.js:178:52 ? @ MessageDispatcher.js:42:34 ------- * STEPS TO REPRODUCE 1. inspect any page 2. close Web Inspector 3. quickly reopen Web Inspector
Attachments
Patch
(4.22 KB, patch)
2019-08-07 13:45 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2019-08-07 13:45:40 PDT
Created
attachment 375746
[details]
Patch
Joseph Pecoraro
Comment 2
2019-08-07 13:47:43 PDT
Comment on
attachment 375746
[details]
Patch arrr=me
WebKit Commit Bot
Comment 3
2019-08-07 14:17:42 PDT
Comment on
attachment 375746
[details]
Patch Clearing flags on attachment: 375746 Committed
r248389
: <
https://trac.webkit.org/changeset/248389
>
WebKit Commit Bot
Comment 4
2019-08-07 14:17:43 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-08-07 14:18:20 PDT
<
rdar://problem/54050293
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug