Web Inspector: Uncaught Exception: TimelineAgent already enabled https://bugs.webkit.org/show_bug.cgi?id=200513

Reviewed by Joseph Pecoraro.

Source/WebCore:

Call `disable` when the last frontend disconnects, so that if Web Inspector is reopened the
`TimelineAgent` is back to being in a disabled state.

* inspector/agents/InspectorTimelineAgent.cpp:
(WebCore::InspectorTimelineAgent::willDestroyFrontendAndBackend):

Source/WebInspectorUI:

Update some incorrect compatibility comments from r248286.

* UserInterface/Protocol/InspectorFrontendAPI.js:
* UserInterface/Controllers/TimelineManager.js:


Canonical link: https://commits.webkit.org/214291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248389 268f45cc-cd09-0410-ab3c-d52691b4dbfc